public/css/styles.css
/* BAGIAN REGISTER LOGIN START*/

.center {
    text-align: center;
    margin : 0 auto;
    width: 500px;
}

#register-page{
    margin: 50px; 
    font-family: spotify-circular, Helvetica, Arial, sans-serif;
}

#register-form{
    text-align: left;
}

#register-form label {
    font-weight:bold;
}

#register-form input, #register-form label{
    display: block;
}

#register-form input{
    width: 100%;
    padding: 12px 20px;
    margin-top:5px;
    margin-bottom: 30px;
    display: inline-block;
    border: 1px solid #ccc;
    border-radius: 4px;
    box-sizing: border-box;
    -webkit-transition: 0.5s;
    transition: 0.5s;
  }

  #register-form input[class=green]:focus {
    outline:none;
    border: 3px solid green;
  }
  #register-form input[class=red]:focus {
    outline:none;
    border: 3px solid red;
  }

  #register-form input[class=green] {
    border: 2px solid green;
  }
  #register-form input[class=red]{
    border: 2px solid red;
  }

  
  #register-form input[type=submit] {
    width: 100%;
    background-color: #4CAF50;
    color: white;
    padding: 14px 20px;
    margin: 8px 0;
    border: none;
    border-radius: 40px;
    cursor: pointer;
  }

  #register-form p {
    margin-top:5px;
    margin-bottom:30px;
  }
  
  #register-form input[type=submit]:hover {
    background-color: #45a049;
  }
  .TOA {
    box-sizing: border-box;
    font-family: spotify-circular, Helvetica, Arial, sans-serif;
    -webkit-tap-highlight-color: transparent;
    display: block;
    padding: 0px 0px 1em;
    margin-top: 0px;
    margin-bottom: 0px;
    font-size: 12px;
    font-weight: 400;
    line-height: 16px;
    letter-spacing: 0.25px;
    color: inherit;
  }

  #submitWarning{
    color: red;
    text-align: center;
  }

  #submitWarning p{
    -webkit-transition: all 1.7s ease;
    transition: all 1.7s ease;
  }

/* BAGIAN REGISTER END */

body {
    font-family: Helvetica, Arial, sans-serif;
    margin:0;
}

/* Add a black background color to the top navigation */
.topnav {
    background-color: black;
    overflow: hidden;
    padding:15px;
}

/* Style the links inside the navigation bar */
.topnav a {
    color: #b3b3b3;
    text-align: center;
    padding: 14px 16px;
    text-decoration: none;
    font-size: 14px;
    font-weight:600;
}

/* Change the color of links on hover */
.topnav a:hover {
    color: white;
}

/* Add a color to the active/current link */
.topnav a.active {
    color: white;
}

.topnav img {
    width:75px;
    margin-right:100px;
    float:left;
}

.topnav input[type=text] {
    width:400px;
    height:40px;
    border-radius: 20px;
    text-indent: 20px;
    margin-top:6px;
    margin-right:100px;
}

.dropdown{
    float:right;
}

.dropdown button{
    background:black;
    color:white;
}

.dropdown-content {
    display: none;
    position: absolute;
    background-color: #f1f1f1;
    min-width: 160px;
    box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
    z-index: 1;
  }

#main{
    background-color: #121212;
    min-height:100vh;
}

#list-lagu{
    margin-left:auto;
    margin-right:auto;
}

#list-lagu tr th {
    color: #b3b3b3;
    font-size: 12px;
    font-weight:100;
    letter-spacing: 1px;
    padding-top:50px;
    padding-bottom:20px;
    text-align:left;
    border-bottom: 1px solid #b3b3b3;
    line-height: 1em;
}

#list-lagu tr td img{
    width : 50px;
}

#list-lagu tr td {
    color : #b3b3b3;
    padding-left : 5px;
    padding-right : 5px;
    padding-top: 5px;
    padding-bottom: 5px;
}

#list-lagu tr .judul-lagu a {
    color: white;
    padding-right:10vw;
    text-decoration: none; 
}

#list-lagu tr .deskripsi{
    width:20vw;
}

#list-lagu tr td .penyanyi{
    padding-top : 2px;
    font-size: 14px;
}

#logo {
    max-width:200px;
    height:auto;
}

/* FOR ERROR PAGE */

#error-page{
  position: absolute;
  top: 10%;
  left: 15%;
  right: 15%;
  bottom: 10%;
  display: flex;
  align-items: center;
  justify-content: center;
  background: #fff;
  box-shadow: 0px 5px 10px rgba(0,0,0,0.1);
}
#error-page .content{
  max-width: 600px;
  text-align: center;
}
.content h2.header{
  font-size: 10vw;
  line-height: 1em;
  position: relative;
}
.content h2.header:after{
  position: absolute;
  content: attr(data-text);
  top: 0;
  left: 0;
  right: 0;
  background: -webkit-repeating-linear-gradient(-45deg, #71b7e6, #69a6ce, #b98acc, #ee8176, #b98acc, #69a6ce, #9b59b6);
  background-size: 400%;
  -webkit-text-fill-color: transparent;
  text-shadow: 1px 1px 2px rgba(255,255,255,0.25);
  animation: animate 10s ease-in-out infinite;
}
.content h4{
  font-size: 1.5em;
  margin-bottom: 20px;
  text-transform: uppercase;
  color: #000;
  font-size: 2em;
  max-width: 600px;
  position: relative;
}
.content h4:after{
  position: absolute;
  content: attr(data-text);
  top: 0;
  left: 0;
  right: 0;
  text-shadow: 1px 1px 2px rgba(255,255,255,0.4);
  -webkit-text-fill-color: transparent;
}
.content p{
  font-size: 1.2em;
  color: #0d0d0d;
}

#container-putar-lagu{
  width:350px;
  margin: auto;
}

#container-putar-lagu img{
  width: 100%;
  margin:auto;
  display:block;
  padding-top: 50px;
  padding-bottom: 30px;
}

#container-putar-lagu #judul{
  color:white;
  font-family: spotify-circular, Helvetica, Arial, sans-serif;
  font-size: 25px;
  font-weight: 400;
  line-height: 16px;
  letter-spacing: 0.25px;
}

#container-putar-lagu #penyanyi{
  color:#b3b3b3;
  font-size: 20px;
  padding: 15px 0 15px 0;
}

#container-putar-lagu audio{
  width: 100%;
  filter:invert(100%);
}

#container-putar-lagu audio::-webkit-media-controls-panel{
  width:100%;
  background-color: #ededed;
}

#container-putar-lagu audio::-webkit-media-controls-timeline-container{
  background-color: #ededed;
}

